Nuevas Pagina y modificaciones de links

--- a/Administracion/consultarPlanEstudioSemanal.html
+++ b/Administracion/consultarPlanEstudioSemanal.html
@@ -55,7 +55,7 @@
 						<li><a href="inscripcion.html">Inscripción</a></li>
 						<li><a href="reinscripcion.html">Reiscripcion</a></li>
 						<li><a href="mensajeriaAdministracion.html">Mensajeria</a></li>
-						<li><a href="#">Usuarios</a></li>
+						<li><a href="gestionUsuarios.html">Usuarios</a></li>
 						<li><a href="gestion.html">Procesos De Gestión</a></li>
 						
 					</ul>
@@ -142,11 +142,11 @@
 		<!-- LADOOOO DERECHOOOOOOOOOOOOOOOOOO -->
 		<div class="sidebar-wrap estilo-sidebar-wrap">
 			<article id="intranetPrincipal">
-				<header class="titulo"><h2>Plan De Estudio Por Lapso</h2></header>
+				<header class="titulo"><h2>Plan De Estudio Semanal</h2></header>
 				<hr />
 			</article>
 			<article id="noticias">
-				<header class="titulo"><h3>Consultar Plan De Estudio Por Lapso</h3></header>
+				<header class="titulo"><h3>Consultar Plan De Estudio Semanal</h3></header>
 				<div id="divAlerta" class='alert alert-danger'>
 					No Existe Planificación
 				</div>	
