--- a/Administracion/gestionDeLibros.html
+++ b/Administracion/gestionDeLibros.html
@@ -54,7 +54,7 @@
 						<li><a >Inscripción</a></li>
 						<li><a href="reinscripcion.html">Reiscripcion</a></li>
 						<li><a >Mensajeria</a></li>
-						<li><a >Usuarios</a></li>
+						<li><a href="gestionUsuarios.html">Usuarios</a></li>
 						<li><a href="gestion.html">Procesos De Gestión</a></li>
 						<li><a >Tramitacion De Documentos</a></li>						
 						<li><a >Foros</a></li>
