--- a/Administracion/viewForos.html
+++ b/Administracion/viewForos.html
@@ -150,7 +150,7 @@
 					<div id="foroTodo">
 						<div id="foroTema">	
 							<figure>
-								<img src="user2.png">			
+								<img src="../images/user2.png">			
 							</figure>
 
 							<div id="nombreTema">
