--- a/Docente/CargaDescargaRecursos.html
+++ b/Docente/CargaDescargaRecursos.html
@@ -8,8 +8,8 @@
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/todoEstilo.css">
-<!--	<link rel="stylesheet" href="../css/miEstilo2.css">
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>-->
+	<link rel="stylesheet" href="../css/miEstilo2.css">
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
@@ -30,7 +30,7 @@
 				
 				</a>
 				<ul>
-					<li><a href="../index.html">Inicio</a></li>
+					<li><a href="intranetDocente.html">Inicio</a></li>
 					<li><a href="../admision.html" class="a-admision">Admisión</a></li>
 					<li><a href="../contacto.html">Contacto</a></li>
 					<li><a href="../institucion.html">La Institución</a></li>
@@ -51,14 +51,14 @@
 				<div class="entry-content estilo-entry-content" >
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="#">Resgistro De Solicitudes</a></li>
-						<li><a href="reinscripcion.html">Envio De Comunicados</a></li>
-						<li><a href="#">Mensajeria</a></li>
-						<li><a href="#">Plan De Estudios</a></li>
-						<li><a href="gestion.html">Carga De Calificaciones</a></li>
-						<li><a href="#">Horario y Calendario Escolar</a></li>
-						<li><a href="#">Foros</a></li>
-						<li><a href="#">Asignaciones y Recursos Educativos</a></li>
+						<li><a href="RegistroSolicitudes.html">Registro De Solicitudes</a></li>
+						<li><a href="envioComunicados.html">Envio De Comunicados</a></li>
+						<li><a href="mensajeriaDocente.html">Mensajeria</a></li>
+						<li><a href="CargaConsultaPlanEstudio.html">Plan De Estudios</a></li>
+						<li><a href="cargaCalificaciones.html">Carga De Calificaciones</a></li>
+						<li><a href="HorarioCalendarioEscolar.html">Horario y Calendario Escolar</a></li>
+						<li><a href="foros.html">Foros</a></li>
+						<li><a href="CargaDescargaRecursos.html">Asignaciones y Recursos Educativos</a></li>
 					</ul>
 				</div>
 			</article>
