--- a/Docente/envioComunicados.html
+++ b/Docente/envioComunicados.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Venezuela 90 | Intranet</title>
+	<title>Venezuela 90 | Envio De Comunicados</title>
 	<link rel="stylesheet" href="../css/genericons.css">
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
@@ -15,7 +15,6 @@
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/docente.js"></script>
-
 </head>
 <body class="p-admision">
 	<!-- HEADERRRRRRRRRRRR -->
@@ -30,7 +29,7 @@
 					
 				</a>
 				<ul>
-					<li><a href="../index.html">Inicio</a></li>
+					<li><a href="intranetDocente.html">Inicio</a></li>
 					<li><a href="../admision.html" class="a-admision">Admisión</a></li>
 					<li><a href="../contacto.html">Contacto</a></li>
 					<li><a href="../institucion.html">La Institución</a></li>
@@ -70,7 +69,7 @@
 				<div class="entry-content estilo-entry-content">
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="PerfilDocente.html">Mi Perfil</a></li>
+						<li><a href="#">Mi Perfil</a></li>
 						<li><a href="#">Editar</a></li>
 						<li><a href="#">Mis Notificaciones</a></li>
 					</ul>
@@ -144,84 +143,103 @@
 		<!-- Noticias -->
 		<div class="sidebar-wrap estilo-sidebar-wrap">
 			<article>
-				<header><h2>Bienvenido</h2></header>
+				<header><h2>Envio De Comunicados</h2></header>
 				<hr />
 			</article>
 			<article id="noticias">
-				<header><h3>Noticias</h3></header>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-			</article>
-		</div>
-		<!-- Informacion General -->
-		<div class="sidebar-wrap estilo-sidebar-wrap" id="info">
+				<header><h3>Comunidados</h3></header>
+					<ul id="listaGestion">
+						<li><a id="iconoconsultar" href="#"></a><a class="textoAbajo" href="#">Para Representantes</a></li>
+						<li><a id="iconomodificar" href="#"></a><a class="textoAbajo" href="#">Para Alumnos</a></li>
+					</ul>					
+			</article>	
 			<article id="noticias">
-				<header><h3>Información General</h3></header>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">							
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">							
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
+				<header><h3>Comunicados A Representantes</h3></header>
+					<ul id="listaGestion">
+						<li><a id="iconoconsultar" href="#"></a><a class="textoAbajo" href="#">Enviar Por Alumno</a></li>
+						<li><a id="iconomodificar" href="#"></a><a class="textoAbajo" href="#">Enviar Por Grado</a></li>
+					</ul>					
 			</article>
+			<article id="noticias">
+				<header><h3>Comunicados A Representantes Por Alumno</h3></header>
+					<div class="centrar primerDivGH">
+						<br>
+						<label>Cedula Del Alumno</label>
+						<input type="text" placeholder="21029953" id="inputParaXalumno">
+						<button id="buttonDocEC" class="classBotonesECDoc">Aceptar</button>
+					</div>	
+
+					<div class="centrar ">
+						<input type="text" class="tamInEC" value="Para: ">
+						<textarea class="textDocEC"></textarea>
+						<button class="classBotonesECDoc">Enviar</button>
+					</div>					
+			</article>	
+			<article id="noticias">
+				<header><h3>Comunicados A Representantes Por Grado</h3></header>
+					<div class="centrar primerDivGH">
+						<br>
+						<label>Grado</label>
+						<select>
+							<option value="1">1er Año</option>
+							<option value="2">2do Año</option>
+							<option value="3">3er Año</option>
+							<option value="4">4to Año</option>
+							<option value="5">5to Año</option>
+						</select>
+						<button class="classBotonesECDoc">Aceptar</button>
+					</div>	
+					<div class="centrar ">
+						<input type="text" class="tamInEC" value="Para: ">
+						<textarea class="textDocEC"></textarea>
+						<button class="classBotonesECDoc">Enviar</button>
+					</div>					
+			</article>	
+
+
+			<article id="noticias">
+				<header><h3>Comunicados A Alumnos</h3></header>
+					<ul id="listaGestion">
+						<li><a id="iconoconsultar" href="#"></a><a class="textoAbajo" href="#">Enviar Por Alumno</a></li>
+						<li><a id="iconomodificar" href="#"></a><a class="textoAbajo" href="#">Enviar Por Grado</a></li>
+					</ul>					
+			</article>		
+
+			<article id="noticias">
+				<header><h3>Comunicados A Alumnos</h3></header>
+					<div class="centrar primerDivGH">
+						<br>
+						<label>Cedula Del Alumno</label>
+						<input type="text" placeholder="21029953">
+						<button id="buttonDocEC" class="classBotonesECDoc">Aceptar</button>
+					</div>	
+
+					<div class="centrar ">
+						<input type="text" class="tamInEC" value="Para: ">
+						<textarea class="textDocEC"></textarea>
+						<button class="classBotonesECDoc">Enviar</button>
+					</div>					
+			</article>	
+			<article id="noticias">
+				<header><h3>Comunicados A Alumnos Por Grado</h3></header>
+					<div class="centrar primerDivGH">
+						<br>
+						<label>Grado</label>
+						<select>
+							<option value="1">1er Año</option>
+							<option value="2">2do Año</option>
+							<option value="3">3er Año</option>
+							<option value="4">4to Año</option>
+							<option value="5">5to Año</option>
+						</select>
+						<button class="classBotonesECDoc">Aceptar</button>
+					</div>	
+					<div class="centrar ">
+						<input type="text" class="tamInEC" value="Para: ">
+						<textarea class="textDocEC"></textarea>
+						<button class="classBotonesECDoc">Enviar</button>
+					</div>					
+			</article>			
 		</div>
 	</section>
 	<!-- FOOTERRRRR -->
