--- a/Administracion/constancias.html
+++ b/Administracion/constancias.html
@@ -54,7 +54,7 @@
 						<li><a href="inscripcion.html">Inscripción</a></li>
 						<li><a href="reinscripcion.html">Reiscripcion</a></li>
 						<li><a href="mensajeriaAdministracion.html">Mensajeria</a></li>
-						<li><a href="#">Usuarios</a></li>
+						<li><a href="gestionUsuarios.html">Usuarios</a></li>
 						<li><a href="gestion.html">Procesos De Gestión</a></li>
 						
 					</ul>
