--- a/Administracion/gestionCalendarioEscolar.html
+++ b/Administracion/gestionCalendarioEscolar.html
@@ -55,7 +55,7 @@
 						<li><a href="inscripcion.html">Inscripción</a></li>
 						<li><a href="reinscripcion.html">Reiscripcion</a></li>
 						<li><a href="mensajeriaAdministracion.html">Mensajeria</a></li>
-						<li><a >Usuarios</a></li>
+						<li><a href="gestionUsuarios.html">Usuarios</a></li>
 						<li><a href="gestion.html">Procesos De Gestión</a></li>
 						<li><a >Tramitacion De Documentos</a></li>
 					</ul>
