--- a/Administracion/gestionDeLibros-c.html
+++ b/Administracion/gestionDeLibros-c.html
@@ -52,7 +52,7 @@
 						<li><a href="#">Inscripción</a></li>
 						<li><a href="reinscripcion.html">Reiscripcion</a></li>
 						<li><a href="#">Mensajeria</a></li>
-						<li><a href="#">Usuarios</a></li>
+						<li><a href="gestionUsuarios.html">Usuarios</a></li>
 						<li><a href="gestion.html">Procesos De Gestión</a></li>
 						<li><a href="#">Tramitacion De Documentos</a></li>						
 						<li><a href="#">Foros</a></li>
