--- a/Alumno/IntranetAlumno.html
+++ b/Alumno/IntranetAlumno.html
@@ -51,13 +51,13 @@
 				<div class="entry-content estilo-entry-content" >
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="#">Inscripción</a></li>
-						<li><a href="reinscripcion.html">Reiscripcion</a></li>
-						<li><a href="#">Mensajeria</a></li>
-						<li><a href="#">Usuarios</a></li>
-						<li><a href="gestion.html">Procesos De Gestión</a></li>
-						<li><a href="#">Tramitacion De Documentos</a></li>
-						<li><a href="#">Foros</a></li>
+						<li><a href="RegistroSolicitudes.html">Registro De Solicitudes</a></li>
+						<li><a href="boletinEscolar.html">Boletin Escolar</a></li>
+						<li><a href="mensajeriaAlumno.html">Mensajeria</a></li>
+						<li><a href="planEstudio.html">Consultar Plan De Estudio</a></li>
+						<li><a href="horarioCalendarioEscolar.html">Horario y Calendario Escolar</a></li>
+						<li><a href="foros.html">Foros</a></li>
+						<li><a href="asignacionesRecursos.html">Asignaciones y Recursos Educativos</a></li>
 					</ul>
 				</div>
 			</article>
