--- a/Alumno/Plantilla.html
+++ b/Alumno/Plantilla.html
@@ -8,14 +8,13 @@
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/todoEstilo.css">
-	<link rel="stylesheet" href="../css/miEstilo2.css">
+	<link rel="stylesheet" href="../css/miEstilo4.css">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
-	<script src="../js/docente.js"></script>
-
+	<script src="../js/studen.js"></script>
 </head>
 <body class="p-admision">
 	<!-- HEADERRRRRRRRRRRR -->
@@ -30,7 +29,7 @@
 					
 				</a>
 				<ul>
-					<li><a href="../index.html">Inicio</a></li>
+					<li><a href="IntranetAlumno.html">Inicio</a></li>
 					<li><a href="../admision.html" class="a-admision">Admisión</a></li>
 					<li><a href="../contacto.html">Contacto</a></li>
 					<li><a href="../institucion.html">La Institución</a></li>
@@ -52,13 +51,12 @@
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
 						<li><a href="RegistroSolicitudes.html">Registro De Solicitudes</a></li>
-						<li><a href="envioComunicados.html">Envio De Comunicados</a></li>
-						<li><a href="mensajeriaDocente.html">Mensajeria</a></li>
-						<li><a href="CargaConsultaPlanEstudio.html">Plan De Estudios</a></li>
-						<li><a href="cargaCalificaciones.html">Carga De Calificaciones</a></li>
-						<li><a href="HorarioCalendarioEscolar.html">Horario y Calendario Escolar</a></li>
+						<li><a href="boletinEscolar.html">Boletin Escolar</a></li>
+						<li><a href="mensajeriaAlumno.html">Mensajeria</a></li>
+						<li><a href="planEstudio.html">Consultar Plan De Estudio</a></li>
+						<li><a href="horarioCalendarioEscolar.html">Horario y Calendario Escolar</a></li>
 						<li><a href="foros.html">Foros</a></li>
-						<li><a href="CargaDescargaRecursos.html">Asignaciones y Recursos Educativos</a></li>
+						<li><a href="asignacionesRecursos.html">Asignaciones y Recursos Educativos</a></li>
 					</ul>
 				</div>
 			</article>
@@ -70,7 +68,7 @@
 				<div class="entry-content estilo-entry-content">
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="PerfilDocente.html">Mi Perfil</a></li>
+						<li><a href="#">Mi Perfil</a></li>
 						<li><a href="#">Editar</a></li>
 						<li><a href="#">Mis Notificaciones</a></li>
 					</ul>
@@ -144,84 +142,16 @@
 		<!-- Noticias -->
 		<div class="sidebar-wrap estilo-sidebar-wrap">
 			<article>
-				<header><h2>Bienvenido</h2></header>
+				<header><h2>Plan De Estudio</h2></header>
 				<hr />
 			</article>
 			<article id="noticias">
-				<header><h3>Noticias</h3></header>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-			</article>
-		</div>
-		<!-- Informacion General -->
-		<div class="sidebar-wrap estilo-sidebar-wrap" id="info">
-			<article id="noticias">
-				<header><h3>Información General</h3></header>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">							
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">							
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-			</article>
+				<header><h3>Carga y Consulta De Plan De Estudio</h3></header>
+					<ul id="listaGestion">
+						<li><a id="iconoconsultar" href="#"></a><a class="textoAbajo" href="#">Consultar</a></li>
+						<li><a id="iconomodificar" href="#"></a><a class="textoAbajo" href="#">Modificar</a></li>
+					</ul>					
+			</article>						
 		</div>
 	</section>
 	<!-- FOOTERRRRR -->
