--- a/Alumno/RegistroSolicitudes.html
+++ b/Alumno/RegistroSolicitudes.html
@@ -8,13 +8,13 @@
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/todoEstilo.css">
-	<link rel="stylesheet" href="../css/miEstilo2.css">
+	<link rel="stylesheet" href="../css/miEstilo4.css">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
-	<script src="../js/docente.js"></script>
+	<script src="../js/studen.js"></script>
 	<script src="../js/registroSolicitudes.js"></script>
 	
 </head>
@@ -31,7 +31,7 @@
 					
 				</a>
 				<ul>
-					<li><a href="../index.html">Inicio</a></li>
+					<li><a href="IntranetAlumno.html">Inicio</a></li>
 					<li><a href="../admision.html" class="a-admision">Admisión</a></li>
 					<li><a href="../contacto.html">Contacto</a></li>
 					<li><a href="../institucion.html">La Institución</a></li>
@@ -52,14 +52,13 @@
 				<div class="entry-content estilo-entry-content" >
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="#">Resgistro De Solicitudes</a></li>
-						<li><a href="reinscripcion.html">Envio De Comunicados</a></li>
-						<li><a href="#">Mensajeria</a></li>
-						<li><a href="#">Plan De Estudios</a></li>
-						<li><a href="gestion.html">Carga De Calificaciones</a></li>
-						<li><a href="#">Horario y Calendario Escolar</a></li>
-						<li><a href="#">Foros</a></li>
-						<li><a href="#">Asignaciones y Recursos Educativos</a></li>
+						<li><a href="RegistroSolicitudes.html">Registro De Solicitudes</a></li>
+						<li><a href="boletinEscolar.html">Boletin Escolar</a></li>
+						<li><a href="mensajeriaAlumno.html">Mensajeria</a></li>
+						<li><a href="planEstudio.html">Consultar Plan De Estudio</a></li>
+						<li><a href="horarioCalendarioEscolar.html">Horario y Calendario Escolar</a></li>
+						<li><a href="foros.html">Foros</a></li>
+						<li><a href="asignacionesRecursos.html">Asignaciones y Recursos Educativos</a></li>
 					</ul>
 				</div>
 			</article>
