--- a/Alumno/consultarPlanEstudioPorLapso.html
+++ b/Alumno/consultarPlanEstudioPorLapso.html
@@ -8,13 +8,14 @@
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/todoEstilo.css">
+	<link rel="stylesheet" href="../css/miEstilo4.css">
 	<link rel="stylesheet" href="../css/planSemanalPrint.css" media="print">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
-	<script src="../js/admins.js"></script>
+	<script src="../js/studen.js"></script>
 	<script src="../js/gestionAdministracionPlanLapso.js"></script>
 
 </head>
@@ -53,11 +54,13 @@
 				<div class="entry-content estilo-entry-content" >
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="inscripcion.html">Inscripción</a></li>
-						<li><a href="reinscripcion.html">Reiscripcion</a></li>
-						<li><a href="mensajeriaAdministracion.html">Mensajeria</a></li>
-						<li><a href="gestionUsuarios.html">Usuarios</a></li>
-						<li><a href="gestion.html">Procesos De Gestión</a></li>
+						<li><a href="RegistroSolicitudes.html">Registro De Solicitudes</a></li>
+						<li><a href="boletinEscolar.html">Boletin Escolar</a></li>
+						<li><a href="mensajeriaAlumno.html">Mensajeria</a></li>
+						<li><a href="planEstudio.html">Consultar Plan De Estudio</a></li>
+						<li><a href="horarioCalendarioEscolar.html">Horario y Calendario Escolar</a></li>
+						<li><a href="foros.html">Foros</a></li>
+						<li><a href="asignacionesRecursos.html">Asignaciones y Recursos Educativos</a></li>
 						
 					</ul>
 				</div>
