--- a/Docente/HorarioCalendarioEscolar.html
+++ b/Docente/HorarioCalendarioEscolar.html
@@ -51,14 +51,14 @@
 				<div class="entry-content estilo-entry-content" >
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="#">Resgistro De Solicitudes</a></li>
-						<li><a href="reinscripcion.html">Envio De Comunicados</a></li>
-						<li><a href="#">Mensajeria</a></li>
-						<li><a href="#">Plan De Estudios</a></li>
-						<li><a href="gestion.html">Carga De Calificaciones</a></li>
-						<li><a href="#">Horario y Calendario Escolar</a></li>
-						<li><a href="#">Foros</a></li>
-						<li><a href="#">Asignaciones y Recursos Educativos</a></li>
+						<li><a href="RegistroSolicitudes.html">Registro De Solicitudes</a></li>
+						<li><a href="envioComunicados.html">Envio De Comunicados</a></li>
+						<li><a href="mensajeriaDocente.html">Mensajeria</a></li>
+						<li><a href="CargaConsultaPlanEstudio.html">Plan De Estudios</a></li>
+						<li><a href="cargaCalificaciones.html">Carga De Calificaciones</a></li>
+						<li><a href="HorarioCalendarioEscolar.html">Horario y Calendario Escolar</a></li>
+						<li><a href="foros.html">Foros</a></li>
+						<li><a href="CargaDescargaRecursos.html">Asignaciones y Recursos Educativos</a></li>
 					</ul>
 				</div>
 			</article>
