--- a/Docente/PerfilDocente.html
+++ b/Docente/PerfilDocente.html
@@ -29,7 +29,7 @@
 				
 				</a>
 				<ul>
-					<li><a href="../index.html">Inicio</a></li>
+					<li><a href="intranetDocente.html">Inicio</a></li>
 					<li><a href="../admision.html" class="a-admision">Admisión</a></li>
 					<li><a href="../contacto.html">Contacto</a></li>
 					<li><a href="../institucion.html">La Institución</a></li>
@@ -50,14 +50,14 @@
 				<div class="entry-content estilo-entry-content" >
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="#">Resgistro De Solicitudes</a></li>
-						<li><a href="reinscripcion.html">Envio De Comunicados</a></li>
-						<li><a href="#">Mensajeria</a></li>
-						<li><a href="#">Plan De Estudios</a></li>
-						<li><a href="gestion.html">Carga De Calificaciones</a></li>
-						<li><a href="#">Horario y Calendario Escolar</a></li>
-						<li><a href="#">Foros</a></li>
-						<li><a href="#">Asignaciones y Recursos Educativos</a></li>
+						<li><a href="RegistroSolicitudes.html">Registro De Solicitudes</a></li>
+						<li><a href="envioComunicados.html">Envio De Comunicados</a></li>
+						<li><a href="mensajeriaDocente.html">Mensajeria</a></li>
+						<li><a href="CargaConsultaPlanEstudio.html">Plan De Estudios</a></li>
+						<li><a href="cargaCalificaciones.html">Carga De Calificaciones</a></li>
+						<li><a href="HorarioCalendarioEscolar.html">Horario y Calendario Escolar</a></li>
+						<li><a href="foros.html">Foros</a></li>
+						<li><a href="CargaDescargaRecursos.html">Asignaciones y Recursos Educativos</a></li>
 					</ul>
 				</div>
 			</article>
@@ -69,8 +69,8 @@
 				<div class="entry-content estilo-entry-content">
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="#">Mi Perfil</a></li>
-						<li><a href="#">Editar</a></li>
+						<li><a href="perfilDocente.html">Mi Perfil</a></li>
+						<li><a href="perfilDocente.html">Editar</a></li>
 						<li><a href="#">Mis Notificaciones</a></li>
 					</ul>
 				</div>
