--- a/Docente/foroResponder.html
+++ b/Docente/foroResponder.html
@@ -3,22 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Venezuela 90 | Intranet</title>
+	<title>Venezuela 90 | Foros</title>
 	<link rel="stylesheet" href="../css/genericons.css">
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/todoEstilo.css">
-	<link rel="stylesheet" href="../css/miEstilo2.css">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
+	<script src="http://js.nicedit.com/nicEdit-latest.js" type="text/javascript"></script>
+	<script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
+	<script src="../js/javascriptForoResponder.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/docente.js"></script>
-
 </head>
-<body class="p-admision">
-	<!-- HEADERRRRRRRRRRRR -->
+<body id="bodyForoResponder" class="p-admision">
+
+	<!-- HEADERRRRRRRRRR -->
 	<header class="site-header">
 		<div class="header-image-container estilo-header">
 			<a href="../index.html" class="header_image"><img src="../images/v90_header.jpg" alt="Venezuela 90"></a>
@@ -26,11 +28,11 @@
 		<div class="nav-wrap">
 			<nav>
 				<span class="toggle-menu">Menú</span>
-				<a href="perfilDocente.html" class="search-form" id="nombreUsuario">
+				<a href="perfilAdministracion.html" class="search-form" id="nombreUsuario">
 					
 				</a>
 				<ul>
-					<li><a href="../index.html">Inicio</a></li>
+					<li><a href="intranetDocente.html">Inicio</a></li>
 					<li><a href="../admision.html" class="a-admision">Admisión</a></li>
 					<li><a href="../contacto.html">Contacto</a></li>
 					<li><a href="../institucion.html">La Institución</a></li>
@@ -70,7 +72,7 @@
 				<div class="entry-content estilo-entry-content">
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="PerfilDocente.html">Mi Perfil</a></li>
+						<li><a href="#">Mi Perfil</a></li>
 						<li><a href="#">Editar</a></li>
 						<li><a href="#">Mis Notificaciones</a></li>
 					</ul>
@@ -141,97 +143,44 @@
 			</aside>
 		</div>
 		<!-- LADOOOO DERECHOOOOOOOOOOOOOOOOOO -->
-		<!-- Noticias -->
 		<div class="sidebar-wrap estilo-sidebar-wrap">
-			<article>
-				<header><h2>Bienvenido</h2></header>
+			<article id="intranetPrincipal">
+				<header><h2>Foros</h2></header>
 				<hr />
 			</article>
 			<article id="noticias">
-				<header><h3>Noticias</h3></header>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
+				<header><h3>Su Respuesta</h3></header>
+				<div id="formularioResponder">
+					<div class="divFormRes">
+						<label id="asunt" name="asunto">Asunto</label>
+						<input id="inputResForo" class=".asuntoResponder" name="asunto" type="text" value="RE: Foro 1">
+					</div>
+					<div class="divFormRes">
+						<label id="labmensaje"name="mensaje">Mensaje</label>
+						<div id="areaText">
+							<textarea id="textarea1" name="mensaje"></textarea>
+						</div>
+					</div>
+					<div id="cent">
+						<button id="enviarResponderForo" class="enviarResponder">Enviar</button>
+					</div>
+				</div>			
 			</article>
-		</div>
-		<!-- Informacion General -->
-		<div class="sidebar-wrap estilo-sidebar-wrap" id="info">
-			<article id="noticias">
-				<header><h3>Información General</h3></header>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">							
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">							
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-			</article>
+
 		</div>
 	</section>
-	<!-- FOOTERRRRR -->
-	<footer class="site-footer" role="contentinfo">
-		<div class="site-info">
-			<span class="v90-logo"></span>
-			<b>Unidad Educativa Venezuela 90</b><br>
-			<address>Carabobo, Valencia, Av. Soublette, <a href="tel:0241-859-5806">0241-859-5806</a></address>
-		</div><!-- .site-info -->
-	</footer>
+
+
+
+<footer class="site-footer" role="contentinfo">
+	<div class="site-info">
+		<span class="v90-logo"></span>
+		<b>Unidad Educativa Venezuela 90</b><br>
+		<address>Carabobo, Valencia, Av. Soublette, <a href="tel:0241-859-5806">0241-859-5806</a></address>
+	</div><!-- .site-info -->
+</footer>
+
+
 
 </body>
 </html>
