Editar Perfil + Cambiar Foto Perfil

--- a/Administracion/gestionCalendarioEscolar.html
+++ b/Administracion/gestionCalendarioEscolar.html
@@ -69,8 +69,8 @@
 				<div class="entry-content estilo-entry-content">
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a >Mi Perfil</a></li>
-						<li><a >Editar</a></li>
+						<li><a href="perfilAdministracion.html">Mi Perfil</a></li>
+						<li><a href="perfilAdministracionEditar.html?valid=1">Editar</a></li>
 						<li><a >Mis Notificaciones</a></li>
 					</ul>
 				</div>
